<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_dashboard"
        android:title="Home"/>
    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_event"
        android:title="Messages"/>
    <item
        android:id="@+id/nav_friends"
        android:icon="@drawable/ic_headset"
        android:title="Friends"/>
    <item
        android:id="@+id/nav_discussion"
        android:icon="@drawable/ic_forum"
        android:title="Discussion"/>
  </group>

  <item android:title="@string/action_settings">
    <menu>
      <item
          android:icon="@drawable/ic_dashboard"
          android:title="@string/action_qr_code"/>
      <item
          android:id="@+id/action_about"
          android:icon="@drawable/ic_forum"
          android:title="@string/action_about"/>
    </menu>
  </item>

</menu>
